[build-system]
requires = ["setuptools", "setuptools-scm"]

[project]
name = "netauditor"
authors = [
    {name = "Timothy Lee", email = "tim.heath.lee@gmail.com"}
]
description = "System for scoring martial arts tournament fights"
readme = "README.md"
requires-python = ">3.11"
keywords = ["network"]
license = ""
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    ""
]
dynamic = ["version"]

[project.scripts]
my-script = ""

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = ""

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.tox
  |Dockerfile
  |Jenkinfile
  |blib2to3
  |tests/data
)/
'''
